repair some features

--- a/src/app/app-nav/app-nav.component.html
+++ b/src/app/app-nav/app-nav.component.html
@@ -10,7 +10,7 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="rooms">Available Rooms</a>
-      <a mat-list-item routerLink="rooms/add">Room Add</a>
+      <a mat-list-item routerLink="rooms/add">Add Room</a>
       <a mat-list-item routerLink="booking">Booking Room</a>
       <a mat-list-item routerLink="comment">Comments</a>
     </mat-nav-list>
