--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,6 @@
     <a [routerLink]="'roomlist'">See the roomlist</a>
     <a [routerLink]="'header'">See the header</a> -->
     <!-- Router outlet to render the all component -->
-    <hiapp-app-nav></hiapp-app-nav>
+    <hiapp-nav></hiapp-nav>
   </body>
 </html>
