--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -28,7 +28,7 @@
     </button>
   </div>
 
-  <form class="form" [formGroup]="bookingForm" (ngSubmit)="addBooking()">
+  <form [formGroup]="bookingForm" (ngSubmit)="addBooking()">
     <mat-form-field
       class="full-width"
       appearance="outline"
